feat: Implement Team Page with admin management and frontend display

--- a/vrcfrontend/src/locales/en/translation.json
+++ b/vrcfrontend/src/locales/en/translation.json
@@ -5,6 +5,10 @@
     "products": "Products",
     "news": "News",
     "contact": "Contact",
+    "team": "Team",
+    "our_team": "Our Team",
+    "meet_our_experts": "Meet our experts",
+    "team_description": "We are a team of dedicated professionals ready to help you.",
     "contact_project": "Contact for similar project",
     "copyright": "© 2024 VRC. All rights reserved.",
     "quick_links": "Quick Links",
