--- a/vrcfrontend/src/locales/vi/translation.json
+++ b/vrcfrontend/src/locales/vi/translation.json
@@ -5,6 +5,10 @@
     "products": "Sản phẩm",
     "news": "Tin tức",
     "contact": "Liên hệ",
+    "team": "Đội ngũ",
+    "our_team": "Đội ngũ của chúng tôi",
+    "meet_our_experts": "Gặp gỡ các chuyên gia",
+    "team_description": "Chúng tôi là đội ngũ chuyên gia tận tâm sẵn sàng hỗ trợ bạn.",
     "contact_project": "Liên hệ dự án tương tự",
     "quick_links": "Liên kết nhanh",
     "privacy_policy": "Chính sách bảo mật",
