feat: implement i18n for admin dashboard forms and pages

--- a/backend/src/locales/en/translation.json
+++ b/backend/src/locales/en/translation.json
@@ -13,7 +13,7 @@
     "events": "Events",
     "contacts": "Contacts",
     "news": "News",
-    "system_settings": "System & Settings",
+    "system_settings": "System Settings",
     "roles": "Roles",
     "navigation": "Navigation",
     "settings": "Settings",
@@ -51,5 +51,225 @@
     "system_running_normal": "System is running normally.",
     "unread_messages": "You have {{count}} unread contact messages.",
     "all_messages_read": "All contact messages have been read.",
-    "sign_out": "Sign out"
+    "sign_out": "Sign out",
+    "team": "Team",
+    "team_management": "Team Management",
+    "add_member": "Add Member",
+    "edit_member": "Edit Member",
+    "new_member": "New Member",
+    "avatar": "Avatar",
+    "order": "Order",
+    "bio": "Bio",
+    "social_links": "Social Links",
+    "no_team_members": "No team members found",
+    "confirm_delete_member": "Are you sure you want to delete this member?",
+    "image_url": "Image URL",
+    "image_preview": "Image Preview",
+    "linkedin_url": "LinkedIn URL",
+    "twitter_url": "Twitter URL",
+    "email_address": "Email Address",
+    "search_products_placeholder": "Search products...",
+    "all_categories": "All Categories",
+    "product_header": "Product",
+    "category_header": "Category",
+    "price_header": "Price",
+    "status_header": "Status",
+    "edit_product": "Edit Product",
+    "create_product": "Create Product",
+    "add_product": "Add Product",
+    "uncategorized": "Uncategorized",
+    "new_label": "New",
+    "bestseller_label": "Bestseller",
+    "confirm_delete_product": "Are you sure you want to delete this product?",
+    "delete_product_fail": "Failed to delete product: ",
+    "save_fail": "Failed to save: ",
+    "no_products": "No products found.",
+    "add_category": "Add Category",
+    "search_categories_placeholder": "Search categories...",
+    "no_categories_for": "No categories found for {{type}}.",
+    "name_header": "Name",
+    "slug_header": "Slug",
+    "description_header": "Description",
+    "edit_category": "Edit Category",
+    "create_category": "Create Category",
+    "slug_optional": "Slug (Optional)",
+    "slug_placeholder": "Auto-generated if empty",
+    "type_label": "Type",
+    "confirm_delete_category": "Are you sure you want to delete this category?",
+    "delete_category_fail": "Failed to delete category",
+    "save_category_fail": "Failed to save category",
+    "menu_management": "Menu Management",
+    "header_menu": "Header Menu",
+    "footer_menu": "Footer Menu",
+    "add_item": "Add Item",
+    "no_menu_items": "No menu items found. Create one to get started.",
+    "inactive": "Inactive",
+    "edit_item": "Edit Item",
+    "new_item": "New Item",
+    "label_label": "Label",
+    "path_label": "Path",
+    "sub_items": "Sub-Items (Links)",
+    "add_link": "Add Link",
+    "no_sub_items": "No sub-items",
+    "active": "Active",
+    "item_updated": "Item updated",
+    "item_created": "Item created",
+    "save_item_fail": "Failed to save item",
+    "item_deleted": "Item deleted",
+    "delete_item_fail": "Failed to delete item",
+    "reorder_fail": "Failed to reorder items",
+    "label_path_required": "Label and Path are required",
+    "confirm_delete_item": "Are you sure you want to delete this menu item?",
+    "save_changes": "Save Changes",
+    "brand_identity": "Brand Identity",
+    "website_logo": "Website Logo",
+    "logo_recommendation": "Recommended size: 200x60px. Max size: 2MB. Format: PNG, JPG, WEBP.",
+    "change_logo": "Change Logo",
+    "uploading": "Uploading...",
+    "general_info_seo": "General Information & SEO",
+    "company_name": "Company Name",
+    "slogan": "Slogan / Tagline",
+    "meta_title": "Meta Title (Default)",
+    "meta_description": "Meta Description (Default)",
+    "contact_details": "Contact Details",
+    "hotline": "Hotline",
+    "working_hours": "Working Hours",
+    "social_media_links": "Social Media Links",
+    "map_embeds": "Map & Embeds",
+    "map_embed_url": "Map Embed URL (src attribute from Google Maps)",
+    "logo_too_large": "Logo size too large. Max 2MB.",
+    "logo_uploaded_temp": "Logo uploaded temporarily. Save changes to persist.",
+    "settings_saved": "Settings saved successfully",
+    "save_settings_fail": "Failed to save settings",
+    "load_settings_fail": "Failed to load settings",
+    "upload_logo_fail": "Failed to upload logo",
+    "confirm_remove_logo": "Remove current logo?",
+    "facebook_label": "Facebook URL",
+    "zalo_label": "Zalo URL",
+    "youtube_label": "YouTube URL",
+    "contact_messages": "Contact Messages",
+    "contact_messages_subtitle": "Manage inquiries from the website.",
+    "search_contacts_placeholder": "Search by name, email...",
+    "date_header": "Date",
+    "subject_header": "Subject",
+    "actions_header": "Actions",
+    "status_new": "New",
+    "status_read": "Read",
+    "status_replied": "Replied",
+    "no_messages": "No messages found.",
+    "message_detail": "Message Detail",
+    "received_on": "Received on",
+    "from_label": "From:",
+    "email_label": "Email:",
+    "phone_label": "Phone:",
+    "current_status_label": "Current Status:",
+    "subject_label": "Subject:",
+    "message_label": "Message:",
+    "mark_replied": "Mark Replied",
+    "close": "Close",
+    "delete_contact_success": "Contact deleted",
+    "delete_contact_fail": "Failed to delete contact",
+    "load_contacts_fail": "Failed to load contacts",
+    "status_updated": "Status updated to {{status}}",
+    "confirm_delete_contact": "Are you sure you want to delete this contact?",
+    "update_status_fail": "Failed to update status",
+    "news_articles": "News & Articles",
+    "add_news": "Add News",
+    "search_news_placeholder": "Search news...",
+    "no_news": "No news found.",
+    "article": "Article",
+    "author": "Author",
+    "confirm_delete_news": "Are you sure you want to delete this news item?",
+    "delete_news_fail": "Failed to delete news",
+    "save_news_fail": "Failed to save news",
+    "edit_project": "Edit Project",
+    "create_project": "Create Project",
+    "add_project": "Add Project",
+    "search_projects_placeholder": "Search projects...",
+    "no_projects": "No projects found.",
+    "project_header": "Project",
+    "client_header": "Client",
+    "completion_date_header": "Completion Date",
+    "featured_header": "Featured",
+    "confirm_delete_project": "Are you sure you want to delete this project?",
+    "delete_project_fail": "Failed to delete project",
+    "save_project_fail": "Failed to save project",
+    "roles_management": "Roles Management",
+    "role_permissions": "Role Permissions",
+    "role_permissions_subtitle": "Manage access levels for each role. Click a checkbox to toggle permission. Don't forget to save changes for each role.",
+    "permission_header": "Permission",
+    "permissions_updated_success": "Permissions updated for {{role}}",
+    "update_permission_fail": "Failed to update: {{code}}",
+    "unexpected_error": "An unexpected error occurred",
+    "users_management": "Users Management",
+    "total_users_count": "Total Users: {{count}}",
+    "search_users_placeholder": "Search users by email or name...",
+    "page_info": "Page {{page}} of {{total}}",
+    "update_role_fail": "Failed to update role. Please try again.",
+    "no_users_found": "No users found.",
+    "user_header": "User",
+    "email_header": "Email",
+    "role_header": "Role",
+    "user_role": "User",
+    "editor_role": "Editor",
+    "admin_role": "Admin",
+    "edit_role": "Edit Role",
+    "select_image": "Select",
+    "image_url": "Image URL",
+    "preview": "Preview",
+    "slug": "Slug",
+    "category": "Category",
+    "summary": "Summary",
+    "content": "Content",
+    "description": "Description",
+    "cancel": "Cancel",
+    "save": "Save",
+    "saving": "Saving...",
+    "edit": "Edit",
+    "create_new": "New",
+    "select_category": "Select Category",
+    "success": "Success",
+    "error": "Error",
+    "event_title": "Title",
+    "event_location": "Location",
+    "event_organizer": "Organizer",
+    "start_date": "Start Date",
+    "end_date": "End Date",
+    "event_status": "Status",
+    "status_upcoming": "Upcoming",
+    "status_ongoing": "Ongoing",
+    "status_past": "Past",
+    "tags": "Tags",
+    "add_tag": "Add tag",
+    "edit_event": "Edit Event",
+    "new_event": "New Event",
+    "save_event": "Save Event",
+    "product_name": "Name",
+    "price": "Price",
+    "price_placeholder": "e.g. $99.99 or Contact for Quote",
+    "is_new": "New Arrival",
+    "is_bestseller": "Bestseller",
+    "features": "Features",
+    "add_feature": "Add feature",
+    "specifications": "Specifications",
+    "spec_key": "Key",
+    "spec_value": "Value",
+    "edit_product": "Edit Product",
+    "new_product": "New Product",
+    "save_product": "Save Product",
+    "service_title": "Service Title",
+    "service_title_placeholder": "Enter title...",
+    "slug_placeholder": "service-slug",
+    "slug_desc": "Service URL slug (unique).",
+    "short_description": "Short Description",
+    "short_desc_placeholder": "Short description of the service...",
+    "content_html": "Content (HTML)",
+    "content_placeholder": "<p>Detailed content...</p>",
+    "html_support": "Supports basic HTML formatting.",
+    "icon_lucide": "Icon (Lucide Name)",
+    "icon_desc": "Icon name from Lucide React library.",
+    "is_visible": "Visible",
+    "is_visible_desc": "Enable to show this service on the website.",
+    "service_create_success": "Service created successfully",
+    "service_update_success": "Service updated successfully"
 }
