--- a/backend/src/locales/vi/translation.json
+++ b/backend/src/locales/vi/translation.json
@@ -13,7 +13,8 @@
     "events": "Sự kiện",
     "contacts": "Liên hệ",
     "news": "Tin tức",
-    "system_settings": "Hệ thống & Cài đặt",
+    "team": "Đội ngũ",
+    "system_settings": "Cài đặt Hệ thống",
     "roles": "Vai trò",
     "navigation": "Điều hướng",
     "settings": "Cài đặt",
@@ -51,5 +52,224 @@
     "system_running_normal": "Hệ thống hoạt động bình thường.",
     "unread_messages": "Bạn có {{count}} tin nhắn liên hệ chưa đọc.",
     "all_messages_read": "Tất cả tin nhắn liên hệ đã được đọc.",
-    "sign_out": "Đăng xuất"
+    "sign_out": "Đăng xuất",
+    "team_management": "Quản lý đội ngũ",
+    "add_member": "Thêm thành viên",
+    "edit_member": "Sửa thành viên",
+    "new_member": "Thành viên mới",
+    "avatar": "Ảnh đại diện",
+    "order": "Thứ tự",
+    "bio": "Tiểu sử",
+    "social_links": "Mạng xã hội",
+    "no_team_members": "Không tìm thấy thành viên nào",
+    "confirm_delete_member": "Bạn có chắc chắn muốn xóa thành viên này không?",
+    "image_url": "Đường dẫn ảnh",
+    "image_preview": "Xem trước ảnh",
+    "linkedin_url": "Liên kết LinkedIn",
+    "twitter_url": "Liên kết Twitter",
+    "email_address": "Địa chỉ Email",
+    "search_products_placeholder": "Tìm kiếm sản phẩm...",
+    "all_categories": "Tất cả danh mục",
+    "product_header": "Sản phẩm",
+    "category_header": "Danh mục",
+    "price_header": "Giá",
+    "status_header": "Trạng thái",
+    "edit_product": "Sửa sản phẩm",
+    "create_product": "Tạo sản phẩm",
+    "add_product": "Thêm sản phẩm",
+    "uncategorized": "Chưa phân loại",
+    "new_label": "Mới",
+    "bestseller_label": "Bán chạy",
+    "confirm_delete_product": "Bạn có chắc chắn muốn xóa sản phẩm này không?",
+    "delete_product_fail": "Xóa sản phẩm thất bại: ",
+    "save_fail": "Lưu thất bại: ",
+    "no_products": "Không tìm thấy sản phẩm.",
+    "add_category": "Thêm danh mục",
+    "search_categories_placeholder": "Tìm kiếm danh mục...",
+    "no_categories_for": "Không tìm thấy danh mục nào cho {{type}}.",
+    "name_header": "Tên",
+    "slug_header": "Đường dẫn (Slug)",
+    "description_header": "Mô tả",
+    "edit_category": "Sửa danh mục",
+    "create_category": "Tạo danh mục",
+    "slug_optional": "Đường dẫn (Tùy chọn)",
+    "slug_placeholder": "Tự động tạo nếu để trống",
+    "type_label": "Loại",
+    "confirm_delete_category": "Bạn có chắc chắn muốn xóa danh mục này không?",
+    "delete_category_fail": "Xóa danh mục thất bại",
+    "save_category_fail": "Lưu danh mục thất bại",
+    "menu_management": "Quản lý Menu",
+    "header_menu": "Menu Đầu trang",
+    "footer_menu": "Menu Chân trang",
+    "add_item": "Thêm Mục",
+    "no_menu_items": "Không tìm thấy mục menu nào. Tạo mới để bắt đầu.",
+    "inactive": "Không hoạt động",
+    "edit_item": "Sửa mục",
+    "new_item": "Mục mới",
+    "label_label": "Nhãn",
+    "path_label": "Đường dẫn",
+    "sub_items": "Mục con (Liên kết)",
+    "add_link": "Thêm liên kết",
+    "no_sub_items": "Không có mục con",
+    "active": "Hoạt động",
+    "item_updated": "Cập nhật mục thành công",
+    "item_created": "Tạo mục thành công",
+    "save_item_fail": "Lưu mục thất bại",
+    "item_deleted": "Đã xóa mục",
+    "delete_item_fail": "Xóa mục thất bại",
+    "reorder_fail": "Sắp xếp lại thất bại",
+    "label_path_required": "Nhãn và Đường dẫn là bắt buộc",
+    "confirm_delete_item": "Bạn có chắc chắn muốn xóa mục menu này không?",
+    "save_changes": "Lưu thay đổi",
+    "brand_identity": "Nhận diện Thương hiệu",
+    "website_logo": "Logo Website",
+    "logo_recommendation": "Kích thước khuyên dùng: 200x60px. Tối đa: 2MB. Định dạng: PNG, JPG, WEBP.",
+    "change_logo": "Đổi Logo",
+    "uploading": "Đang tải lên...",
+    "general_info_seo": "Thông tin chung & SEO",
+    "company_name": "Tên Công ty",
+    "slogan": "Khẩu hiệu (Slogan)",
+    "meta_title": "Tiêu đề Meta (Mặc định)",
+    "meta_description": "Mô tả Meta (Mặc định)",
+    "contact_details": "Thông tin Liên hệ",
+    "hotline": "Hotline",
+    "working_hours": "Giờ làm việc",
+    "social_media_links": "Mạng xã hội",
+    "map_embeds": "Bản đồ & Nhúng",
+    "map_embed_url": "URL Nhúng Bản đồ (thuộc tính src từ Google Maps)",
+    "logo_too_large": "Kích thước logo quá lớn. Tối đa 2MB.",
+    "logo_uploaded_temp": "Logo đã tải lên tạm thời. Lưu thay đổi để áp dụng.",
+    "settings_saved": "Đã lưu cài đặt thành công",
+    "save_settings_fail": "Lưu cài đặt thất bại",
+    "load_settings_fail": "Tải cài đặt thất bại",
+    "upload_logo_fail": "Tải logo thất bại",
+    "confirm_remove_logo": "Bạn có chắc chắn muốn xóa logo?",
+    "facebook_label": "Facebook URL",
+    "zalo_label": "Zalo URL",
+    "youtube_label": "YouTube URL",
+    "contact_messages": "Tin nhắn Liên hệ",
+    "contact_messages_subtitle": "Quản lý thắc mắc từ website.",
+    "search_contacts_placeholder": "Tìm theo tên, email...",
+    "date_header": "Ngày",
+    "subject_header": "Chủ đề",
+    "actions_header": "Hành động",
+    "status_new": "Mới",
+    "status_read": "Đã đọc",
+    "status_replied": "Đã trả lời",
+    "no_messages": "Không tìm thấy tin nhắn nào.",
+    "message_detail": "Chi tiết Tin nhắn",
+    "received_on": "Nhận lúc",
+    "from_label": "Từ:",
+    "email_label": "Email:",
+    "phone_label": "Điện thoại:",
+    "current_status_label": "Trạng thái hiện tại:",
+    "subject_label": "Chủ đề:",
+    "message_label": "Nội dung:",
+    "mark_replied": "Đánh dấu Đã trả lời",
+    "close": "Đóng",
+    "delete_contact_success": "Đã xóa liên hệ",
+    "delete_contact_fail": "Xóa liên hệ thất bại",
+    "load_contacts_fail": "Tải liên hệ thất bại",
+    "status_updated": "Trạng thái đã cập nhật thành {{status}}",
+    "confirm_delete_contact": "Bạn có chắc chắn muốn xóa liên hệ này không?",
+    "update_status_fail": "Cập nhật trạng thái thất bại",
+    "news_articles": "Tin tức & Bài viết",
+    "add_news": "Thêm Tin tức",
+    "search_news_placeholder": "Tìm kiếm tin tức...",
+    "no_news": "Không tìm thấy tin tức nào.",
+    "article": "Bài viết",
+    "author": "Tác giả",
+    "confirm_delete_news": "Bạn có chắc chắn muốn xóa tin tức này không?",
+    "delete_news_fail": "Xóa tin tức thất bại",
+    "save_news_fail": "Lưu tin tức thất bại",
+    "edit_project": "Sửa Dự án",
+    "create_project": "Tạo Dự án",
+    "add_project": "Thêm Dự án",
+    "search_projects_placeholder": "Tìm kiếm dự án...",
+    "no_projects": "Không tìm thấy dự án nào.",
+    "project_header": "Dự án",
+    "client_header": "Khách hàng",
+    "completion_date_header": "Ngày hoàn thành",
+    "featured_header": "Nổi bật",
+    "confirm_delete_project": "Bạn có chắc chắn muốn xóa dự án này không?",
+    "delete_project_fail": "Xóa dự án thất bại",
+    "save_project_fail": "Lưu dự án thất bại",
+    "roles_management": "Quản lý Vai trò",
+    "role_permissions": "Phân quyền Vai trò",
+    "role_permissions_subtitle": "Quản lý cấp độ truy cập cho từng vai trò. Nhấn vào ô để bật/tắt quyền. Đừng quên lưu thay đổi cho từng vai trò.",
+    "permission_header": "Quyền hạn",
+    "permissions_updated_success": "Đã cập nhật quyền cho {{role}}",
+    "update_permission_fail": "Cập nhật thất bại: {{code}}",
+    "unexpected_error": "Có lỗi xảy ra không mong muốn",
+    "users_management": "Quản lý Người dùng",
+    "total_users_count": "Tổng người dùng: {{count}}",
+    "search_users_placeholder": "Tìm người dùng theo email hoặc tên...",
+    "page_info": "Trang {{page}} trên {{total}}",
+    "update_role_fail": "Cập nhật vai trò thất bại. Vui lòng thử lại.",
+    "no_users_found": "Không tìm thấy người dùng nào.",
+    "user_header": "Người dùng",
+    "email_header": "Email",
+    "role_header": "Vai trò",
+    "user_role": "Người dùng",
+    "editor_role": "Biên tập viên",
+    "admin_role": "Quản trị viên",
+    "edit_role": "Sửa vai trò",
+    "select_image": "Chọn ảnh",
+    "image_url": "Đường dẫn ảnh",
+    "preview": "Xem trước",
+    "slug": "Đường dẫn",
+    "category": "Danh mục",
+    "summary": "Tóm tắt",
+    "content": "Nội dung",
+    "description": "Mô tả",
+    "cancel": "Hủy",
+    "save": "Lưu",
+    "saving": "Đang lưu...",
+    "edit": "Sửa",
+    "create_new": "Tạo mới",
+    "select_category": "Chọn danh mục",
+    "success": "Thành công",
+    "error": "Lỗi",
+    "event_title": "Tiêu đề",
+    "event_location": "Địa điểm",
+    "event_organizer": "Ban tổ chức",
+    "start_date": "Ngày bắt đầu",
+    "end_date": "Ngày kết thúc",
+    "event_status": "Trạng thái",
+    "status_upcoming": "Sắp diễn ra",
+    "status_ongoing": "Đang diễn ra",
+    "status_past": "Đã qua",
+    "tags": "Thẻ",
+    "add_tag": "Thêm thẻ",
+    "edit_event": "Sửa Sự kiện",
+    "new_event": "Sự kiện Mới",
+    "save_event": "Lưu Sự kiện",
+    "product_name": "Tên sản phẩm",
+    "price": "Giá",
+    "price_placeholder": "VD: 100.000đ hoặc Liên hệ báo giá",
+    "is_new": "Sản phẩm mới",
+    "is_bestseller": "Bán chạy",
+    "features": "Tính năng",
+    "add_feature": "Thêm tính năng",
+    "specifications": "Thông số kỹ thuật",
+    "spec_key": "Tên thông số",
+    "spec_value": "Giá trị",
+    "edit_product": "Sửa Sản phẩm",
+    "new_product": "Sản phẩm Mới",
+    "save_product": "Lưu Sản phẩm",
+    "service_title": "Tiêu đề dịch vụ",
+    "service_title_placeholder": "Nhập tiêu đề...",
+    "slug_placeholder": "duong-dan-dich-vu",
+    "slug_desc": "Đường dẫn URL của dịch vụ (duy nhất).",
+    "short_description": "Mô tả ngắn",
+    "short_desc_placeholder": "Mô tả ngắn về dịch vụ...",
+    "content_html": "Nội dung chi tiết (HTML)",
+    "content_placeholder": "<p>Nội dung chi tiết...</p>",
+    "html_support": "Hỗ trợ định dạng HTML cơ bản.",
+    "icon_lucide": "Icon (Tên Lucide)",
+    "icon_desc": "Tên icon từ thư viện Lucide React.",
+    "is_visible": "Hiển thị",
+    "is_visible_desc": "Bật để hiển thị dịch vụ này trên trang web.",
+    "service_create_success": "Tạo dịch vụ mới thành công",
+    "service_update_success": "Cập nhật dịch vụ thành công"
 }
