--- a/vrcfrontend/src/locales/en/translation.json
+++ b/vrcfrontend/src/locales/en/translation.json
@@ -23,5 +23,43 @@
     "tag_air_conditioner": "Air Conditioner",
     "tag_maintenance": "Maintenance",
     "tag_energy_saving": "Energy Saving",
-    "tag_chiller": "Chiller"
+    "tag_chiller": "Chiller",
+    "contact_us_title": "Contact Us",
+    "contact_us_desc": "We are always here to help. Leave your information and we will respond as soon as possible.",
+    "sent_success": "Sent Successfully!",
+    "sent_success_desc": "Thank you for contacting us. We will respond shortly!",
+    "sent_fail": "Send Failed",
+    "sent_fail_desc": "An error occurred. Please try again later or contact our hotline directly.",
+    "full_name": "Full Name",
+    "full_name_placeholder": "John Doe",
+    "phone_number": "Phone Number",
+    "subject": "Subject",
+    "select_subject": "Select a subject",
+    "subject_general": "General Information",
+    "subject_support": "Technical Support",
+    "subject_quote": "Request Quote",
+    "subject_partnership": "Partnership",
+    "subject_other": "Other",
+    "message_content": "Message",
+    "message_placeholder": "Please tell us more about your needs...",
+    "sending": "Sending",
+    "send_message": "Send Message",
+    "find_out_more": "Find out more",
+    "featured_products": "Featured Products",
+    "featured_products_desc": "Explore our leading refrigeration solutions, suitable for all industrial and commercial needs.",
+    "view_all_products": "View all products",
+    "latest_news": "Latest News",
+    "latest_news_desc": "Check out the latest reports, studies, and guides on energy-saving technology and high-performance HVAC solutions.",
+    "view_all_news": "View all news",
+    "read_more": "Read more",
+    "tools_resources": "Tools & Resources",
+    "tools_resources_desc": "Access calculation tools, analytical data, and support resources for selecting and operating effective air conditioning systems.",
+    "loading_data": "Loading data",
+    "view_details": "View details",
+    "collapse": "Collapse",
+    "view_all": "View all",
+    "contact_info": "Contact Information",
+    "working_hours": "Working Hours",
+    "connect_with_us": "Connect with us",
+    "map": "Map"
 }
