--- a/vrcfrontend/src/locales/vi/translation.json
+++ b/vrcfrontend/src/locales/vi/translation.json
@@ -5,6 +5,8 @@
     "products": "Sản phẩm",
     "news": "Tin tức",
     "contact": "Liên hệ",
+    "services": "Dịch vụ",
+    "projects": "Dự án",
     "team": "Đội ngũ",
     "our_team": "Đội ngũ của chúng tôi",
     "meet_our_experts": "Gặp gỡ các chuyên gia",
@@ -23,5 +25,43 @@
     "tag_maintenance": "Bảo trì",
     "tag_energy_saving": "Tiết kiệm năng lượng",
     "tag_chiller": "Chiller",
+    "contact_us_title": "Liên hệ với chúng tôi",
+    "contact_us_desc": "Chúng tôi luôn lắng nghe và sẵn sàng hỗ trợ bạn. Hãy để lại thông tin, chúng tôi sẽ phản hồi sớm nhất có thể.",
+    "sent_success": "Gửi thành công!",
+    "sent_success_desc": "Cảm ơn bạn đã liên hệ. Chúng tôi sẽ phản hồi trong thời gian sớm nhất!",
+    "sent_fail": "Gửi thất bại",
+    "sent_fail_desc": "Đã có lỗi xảy ra. Vui lòng thử lại sau hoặc liên hệ trực tiếp qua hotline.",
+    "full_name": "Họ và tên",
+    "full_name_placeholder": "Nguyễn Văn A",
+    "phone_number": "Số điện thoại",
+    "subject": "Chủ đề quan tâm",
+    "select_subject": "Chọn chủ đề",
+    "subject_general": "Thông tin chung",
+    "subject_support": "Hỗ trợ kỹ thuật",
+    "subject_quote": "Yêu cầu báo giá",
+    "subject_partnership": "Hợp tác kinh doanh",
+    "subject_other": "Khác",
+    "message_content": "Nội dung tin nhắn",
+    "message_placeholder": "Hãy chia sẻ chi tiết về nhu cầu của bạn...",
+    "sending": "Đang gửi",
+    "send_message": "Gửi liên hệ ngay",
+    "find_out_more": "Tìm hiểu thêm",
+    "featured_products": "Sản phẩm nổi bật",
+    "featured_products_desc": "Khám phá các giải pháp điện lạnh hàng đầu của chúng tôi, phù hợp với mọi nhu cầu công nghiệp và thương mại.",
+    "view_all_products": "Xem tất cả sản phẩm",
+    "latest_news": "Bài viết mới nhất",
+    "latest_news_desc": "Tham khảo các báo cáo, nghiên cứu và hướng dẫn mới nhất về công nghệ tiết kiệm năng lượng và giải pháp điều hòa không khí hiệu suất cao.",
+    "view_all_news": "Xem tất cả bài viết",
+    "read_more": "Xem thêm",
+    "tools_resources": "Công cụ & Tài nguyên",
+    "tools_resources_desc": "Truy cập các công cụ tính toán, dữ liệu phân tích và tài nguyên hỗ trợ cho việc lựa chọn và vận hành hệ thống điều hòa không khí hiệu quả.",
+    "loading_data": "Đang tải dữ liệu",
+    "view_details": "Xem chi tiết",
+    "collapse": "Thu gọn",
+    "view_all": "Xem tất cả",
+    "contact_info": "Thông tin liên hệ",
+    "working_hours": "Giờ làm việc",
+    "connect_with_us": "Kết nối với chúng tôi",
+    "map": "Bản đồ",
     "copyright": "© 2024 VRC. Bảo lưu mọi quyền."
 }
